# olive

./: .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md  deps.repos  package.xml
benchmark/: README.md  RESULTS.md  full_stack_replay.sh
benchmark/micro/: bench_keyframe_map.cpp  bench_scan_matcher.cpp  build_and_run.sh
config/: fusion.yaml  fusion_real.yaml  lidar_odom.yaml  whycode_camera_intrinsics_sim.yaml  whycode_detector_real.yaml  whycode_detector_sim.yaml
include/olive/common/: covariance_utils.hpp  gtsam_conversions.hpp  transform_utils.hpp  types.hpp
include/olive/fusion/: feature_extractor.hpp  fusion_node.hpp  fusion_types.hpp  health_monitor.hpp  imu_buffer.hpp  keyframe_map.hpp  knn_tree.hpp  loop_detector.hpp  marker_anchor_factor.hpp  marker_gate.hpp  marker_observation_factor.hpp  pose_graph.hpp  scan_matcher.hpp  scan_preprocessor.hpp  wheel_odom_buffer.hpp
include/olive/fusion/frontend/: feature_extractor.hpp  scan_matcher.hpp  scan_preprocessor.hpp
include/olive/fusion/graph/: keyframe_map.hpp  loop_detector.hpp  marker_anchor_factor.hpp  marker_observation_factor.hpp  pose_graph.hpp
include/olive/fusion/inputs/: imu_buffer.hpp  marker_gate.hpp  wheel_odom_buffer.hpp
include/olive/lidar_odom/: feature_extractor.hpp  feature_registration.hpp  feature_types.hpp  lidar_config.hpp  lidar_odometry.hpp  lidar_utils.hpp  local_map.hpp  map_types.hpp  parameter_loader.hpp  registration_types.hpp
include/olive/vo/: visual_odometry_node.hpp
launch/: sensor_fusion.launch.py
rviz/: fusion_debug.rviz
scripts/: README.md  analyze_bag.py  ate_eval.py  bringup_test.sh  calibrate_marker_range.py  drive_test.py  imu_bias_relay.py  lidar_gate_relay.py  plot_results.py
scripts/bringup/: square_drive.py
scripts/evaluation/: analyze_bag.py  drive_test.py  endurance_test.py  marker_demo.py  plot_results.py
scripts/fault_injection/: wheel_odom_relay.py
src/fusion/: feature_extractor.cpp  fusion_node.cpp  fusion_node_debug.cpp  fusion_node_lidar.cpp  fusion_node_lifecycle.cpp  fusion_node_publish.cpp  fusion_node_sensors.cpp  health_monitor.cpp  imu_buffer.cpp  keyframe_map.cpp  loop_detector.cpp  marker_gate.cpp  pose_graph.cpp  scan_matcher.cpp  scan_preprocessor.cpp  wheel_odom_buffer.cpp
src/fusion/frontend/: feature_extractor.cpp  scan_matcher.cpp  scan_preprocessor.cpp
src/fusion/graph/: keyframe_map.cpp  loop_detector.cpp  pose_graph.cpp
src/fusion/inputs/: imu_buffer.cpp  marker_gate.cpp  wheel_odom_buffer.cpp
src/lidar_odom/: feature_extractor.cpp  feature_registration.cpp  lidar_odometry.cpp  local_map.cpp
src/nodes/: fusion_node_main.cpp  lidar_odom_node.cpp  vo_node_main.cpp
src/vo/: visual_odometry_node.cpp
test/: test_covariance_utils.cpp  test_health_monitor.cpp  test_imu_buffer.cpp  test_keyframe_map.cpp  test_loop_detector.cpp  test_marker_anchor.cpp  test_marker_gate.cpp  test_marker_observation.cpp  test_pose_graph.cpp  test_scan_matcher.cpp  test_scan_preprocessor.cpp  test_wheel_odom_buffer.cpp
