<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olive</name>
  <version>1.0.0</version>
  <description>Graph-based sensor fusion system for multi-modal odometry integration</description>
  <maintainer email="gupta.adyansh@gmail.com">Adyansh Gupta</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Perception libraries -->
  <depend>whycode_vision</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- External libraries -->
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libpcl-dev</build_depend>
  <build_depend>gtsam</build_depend>

  <exec_depend>eigen</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>libpcl-dev</exec_depend>
  <exec_depend>gtsam</exec_depend>

  <!-- Runtime for the test/calibration scripts -->
  <exec_depend>rclpy</exec_depend>

  <!-- Testing -->
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
